Added key null check

--- a/Python/Medium/Design Underground System.ipynb
+++ b/Python/Medium/Design Underground System.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,10 @@
     "        self.checkOutTimes = UndergroundSystem.checkOutTimes\n",
     "\n",
     "    def checkIn(self, id: int, stationName: str, t: int) -> None:\n",
-    "        self.checkInTimes[id] = (stationName, t)\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "        self.checkInTimes[id] = (stationName, t)        \n",
     "\n",
     "    def checkOut(self, id: int, stationName: str, t: int) -> None:\n",
-    "        self.checkOutTimes[id] = (stationName, t)\n",
-    "    \n",
-    "        \n",
+    "        self.checkOutTimes[id] = (stationName, t)        \n",
     "\n",
     "    def getAverageTime(self, startStation: str, endStation: str) -> float:\n",
     "        averageTime = 0\n",
@@ -32,12 +26,14 @@
     "        for id in self.checkInTimes:\n",
     "            endTime = 0\n",
     "            startTime = 0\n",
-    "            if(self.checkInTimes[id][0] == startStation):\n",
-    "                startTime = self.checkInTimes[id][1]\n",
-    "                print(\"Start time for customer \" + str(id) + \" from startStation \" + startStation + \" = \" + str(startTime))\n",
-    "            if (self.checkOutTimes[id][0] == endStation):\n",
-    "                endTime = self.checkOutTimes[id][1]\n",
-    "                print(\"End time for customer \" + str(id) + \" from endStation \" + endStation + \" = \" + str(endTime))\n",
+    "            if(self.checkInTimes.get(id)) != None:\n",
+    "                if(self.checkInTimes[id][0] == startStation):\n",
+    "                    startTime = self.checkInTimes[id][1]\n",
+    "                    print(\"Start time for customer \" + str(id) + \" from startStation \" + startStation + \" = \" + str(startTime))\n",
+    "            if(self.checkOutTimes.get(id) != None):\n",
+    "                if (self.checkOutTimes[id][0] == endStation):\n",
+    "                    endTime = self.checkOutTimes[id][1]\n",
+    "                    print(\"End time for customer \" + str(id) + \" from endStation \" + endStation + \" = \" + str(endTime))\n",
     "            if (endTime > startTime):\n",
     "                timeTaken = endTime - startTime\n",
     "                print(\"timeTaken = \" + str(timeTaken))\n",
@@ -67,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +114,7 @@
        "{45: ('Leyton', 3), 32: ('Paradise', 8), 27: ('Leyton', 10)}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -138,13 +134,65 @@
        "{45: ('Waterloo', 15), 27: ('Waterloo', 20), 32: ('Cambridge', 22)}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "obj.checkOutTimes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{45: ('Leyton', 3),\n",
+       " 32: ('Paradise', 8),\n",
+       " 27: ('Leyton', 10),\n",
+       " 10: ('Leyton', 24)}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.checkIn(10, \"Leyton\", 24);\n",
+    "obj.checkInTimes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start time for customer 45 from startStation Leyton = 3\n",
+      "End time for customer 45 from endStation Waterloo = 15\n",
+      "timeTaken = 12\n",
+      "[12]\n",
+      "Start time for customer 27 from startStation Leyton = 10\n",
+      "End time for customer 27 from endStation Waterloo = 20\n",
+      "timeTaken = 10\n",
+      "[12, 10]\n",
+      "Start time for customer 10 from startStation Leyton = 24\n",
+      "Commute Times between Leyton and Waterloo are:\n",
+      "[12, 10]\n",
+      "11.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(obj.getAverageTime(\"Leyton\", \"Waterloo\"))"
    ]
   }
  ],
